--- a/index-ar.html
+++ b/index-ar.html
@@ -46,10 +46,10 @@
     <!-- Start header -->
     <section class="px-2 py-4">
         <div class="row">
-            <div class="col">
-                <a href=""><img width="250" src="./content/assets/img/logo/logo-en.webp" alt=""></a>
+            <div class="col-4">
+                <a href="./index-ar.html"><img width="250" src="./content/assets/img/logo/logo-ar.webp" alt=""></a>
             </div>
-            <div class="col d-none d-lg-block">
+            <div class="col-8 d-none d-lg-block">
                 <div class="d-flex column-gap-4">
                     <div class="navbar__box">
                         <i class="fa-solid fa-phone-volume fs-3 me-2 text-danger"></i>
@@ -69,7 +69,7 @@
                         <i class="fa-solid fa-location-dot fs-3 me-2 text-danger"></i>
                         <div class="navbar__box__text text-color fontf__oswald fw-bolder">
                             <p>العنوان</p>
-                            <a class="fs-6" href="tel:+01022674132">28st. Msadak</a>
+                            <a href="#map">الرياض- حي الملز -الشارع :طريق صلاح الدين الايوبي</a>
                         </div>
                     </div>
                 </div>
@@ -83,12 +83,20 @@
     </section>
 
     <!-- Start Navs -->
-    <nav class="descktop-nav bg_red_color d-none d-lg-flex justify-content-between">
-        <ul class="navslist m-0 p-0 py-3">
+    <nav class="desktop-nav bg_red_color d-none d-lg-flex justify-content-between">
+        <ul class="navslist m-0 p-0">
             <li><a class="text-white" href="./index.html">الصفحة الرئيسية</a></li>
+            <li><a class="text-white" href="./index.html">خدماتنا</a></li>
+            <li class="desktop__dropdown">
+                <a class="text-white">المنافذ</a>
+                <ul class="dropdown__content bg-white">
+                    <li><a href="./outlets/offshore/offshore-ar.html" class="text_main_color">منافذ بحرية</a></li>
+                    <li><a href="./outlets/land/land-ar.html" class="text_main_color">منافذ برية</a></li>
+                    <li><a href="./outlets/air/air-ar.html" class="text_main_color">منافذ جوية</a></li>
+                </ul>
+            </li>
             <li><a class="text-white" href="./index.html">عن الشركة</a></li>
             <li><a class="text-white" href="./index.html">تواصل معنا</a></li>
-            <li><a class="text-white" href="./index.html">خدماتنا</a></li>
             <li><a class="text-white" href="./index.html">English</a></li>
         </ul>
         <button class="fontf__oswald">طلب سعر </button>
@@ -98,10 +106,27 @@
     <nav class="mobile-nav">
         <span class="closing_btn"><i class="fa-solid fa-x text-white rounded-circle"></i></span>
         <ul class="mobile-nav__list m-0 p-0 py-2">
-            <a href="./index.html">الصفحة الرئيسية</a>
-            <a href="./index.html">عن الشركة</a>
-            <a href="./index.html">تواصل معنا</a>
+            <a href="./index-ar.html">Home</a>
             <a href="./index.html">خدماتنا</a>
+            <li class="mobile__dropdown fontf__oswald">
+                <div class="d-flex justify-content-between align-items-center">
+                    <span>المنافذ</span>
+                    <div class="plus__btn">
+                        <div class="bar"></div>
+                    </div>
+                </div>
+                <ul class="mobile__dropdown__content bg-white">
+                    <li><a class="text_main_color" href="./outlets/offshore/offshore-ar.html"
+                            class="text_main_color">منافذ بحرية</a></li>
+                    <li><a class="text_main_color" href="./outlets/land/land-ar.html" class="text_main_color">منافذ
+                            برية</a>
+                    </li>
+                    <li><a class="text_main_color" href="./outlets/air/air-ar.html" class="text_main_color">منافذ
+                            جوية</a></li>
+                </ul>
+            </li>
+            <a href="./about-us/about-ar.html">عن الشركة</a>
+            <a href="./contact/contact-ar.html">تواصل معنا</a>
             <a href="./index.html">English</a>
         </ul>
         <div class="mobile-nav__info">
@@ -162,35 +187,35 @@
         </div>
     </section>
 
-    <!-- Start Services section  -->
+    <!-- Start outlets section  -->
     <div class="container">
-        <div class="services-section">
+        <div class="outlets-section">
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3">
                 <div class="col">
-                    <div class="services__card">
-                        <div class="sercices__icon"><img width="60"
-                                src="./content/assets/img/services-section/boat.webp" alt=""></div>
-                        <h3><a class="text_main_color" href="#">منافذ بحرية</a></h3>
+                    <div class="outlets__card">
+                        <div class="outlets__icon"><img width="60" src="./content/assets/img/outlets-section/boat.webp"
+                                alt=""></div>
+                        <h3><a class="text_main_color" href="./outlets/offshore/offshore-ar.html">منافذ بحرية</a></h3>
                         <p class="text-color">نوفر خدماتنا لتشمل أكثر من منفذ بحري في مختلف بقاع المملكة</p>
-                        <a class="text_main_color" href="#">تفاصيل الخدمة</a>
+                        <a class="text_main_color" href="./outlets/offshore/offshore-ar.html">تفاصيل الخدمة</a>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="services__card">
-                        <div class="sercices__icon"><img width="60"
-                                src="./content/assets/img/services-section/frontal-truck.webp" alt=""></div>
-                        <h3><a class="text_main_color" href="#">منافذ برية</a></h3>
+                    <div class="outlets__card">
+                        <div class="outlets__icon"><img width="60"
+                                src="./content/assets/img/outlets-section/frontal-truck.webp" alt=""></div>
+                        <h3><a class="text_main_color" href="./outlets/land/land-ar.html">منافذ برية</a></h3>
                         <p class="text-color">نوفر خدماتنا لتشمل أكثر من منفذ بري في مختلف بقاع المملكة</p>
-                        <a class="text_main_color" href="#">تفاصيل الخدمة</a>
+                        <a class="text_main_color" href="./outlets/land/land-ar.html">تفاصيل الخدمة</a>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="services__card">
-                        <div class="sercices__icon"><img width="60"
-                                src="./content/assets/img/services-section/plane.webp" alt=""></div>
-                        <h3><a class="text_main_color" href="#">منافذ جوية</a></h3>
+                    <div class="outlets__card">
+                        <div class="outlets__icon"><img width="60" src="./content/assets/img/outlets-section/plane.webp"
+                                alt=""></div>
+                        <h3><a class="text_main_color" href="./outlets/air/air-ar.html">منافذ جوية</a></h3>
                         <p class="text-color">نوفر خدماتنا لتشمل أكثر من منفذ جوي في مختلف بقاع المملكة</p>
-                        <a class="text_main_color" href="#">تفاصيل الخدمة</a>
+                        <a class="text_main_color" href="./outlets/air/air-ar.html">تفاصيل الخدمة</a>
                     </div>
                 </div>
             </div>
@@ -242,7 +267,7 @@
                 <div class="col-12 col-lg-6 px-5 mt-lg-0 mt-5">
                     <span class="text_red_color fw-bold">مبادئنا</span>
                     <h2 class="text_main_color mb-4">نعمل وفق مبادئ ومعايير محددة لضمان تقديم أفضل خدمة لعملائنا</h2>
-                    <ul>
+                    <ul class="number__list">
                         <li class="text-color mb-2 fs-5 fontf__oswald mb-4"><span>01</span>النزاهة والشفافية</li>
                         <li class="text-color mb-2 fs-5 fontf__oswald mb-4"><span>02</span>المصداقية</li>
                         <li class="text-color mb-2 fs-5 fontf__oswald mb-4"><span>03</span>سرعة الإنجاز</li>
@@ -352,23 +377,37 @@
                     <div class="quote__content bg-white">
                         <span class="text_red_color fw-bold">دعوة للعمل</span>
                         <h2 class="text_main_color mb-4">طلب خدمة</h2>
-                        <form class="quote__form">
+                        <form class="public__form" id="checkout_form" method="POST" autocomplete="off"
+                            name="google-sheet">
                             <div class="row row-cols-1 row-cols-md-2">
                                 <div class="col">
                                     <div class="input-group mb-3">
-                                        <input type="text" class="form-control quote__form__input fontf__oswald fw-bold"
-                                            placeholder="الاسم" aria-label="Name" aria-describedby="basic-addon1">
+                                        <input type="text"
+                                            class="form-control public__form__input fontf__oswald fw-bold"
+                                            placeholder="الأسم" aria-label="name" aria-describedby="basic-addon1"
+                                            required name="name">
                                         <span class="input-group-text" id="basic-addon1"><i
                                                 class="fa-solid fa-user"></i></span>
                                     </div>
                                 </div>
                                 <div class="col">
                                     <div class="input-group mb-3">
-                                        <input type="text" class="form-control quote__form__input fontf__oswald fw-bold"
-                                            placeholder="الموضوع" aria-label="Subject" aria-describedby="basic-addon1">
+                                        <input type="text"
+                                            class="form-control public__form__input fontf__oswald fw-bold"
+                                            placeholder="الموضوع" aria-label="subject" aria-describedby="basic-addon2"
+                                            required name="subject">
                                         <span class="input-group-text" id="basic-addon2"><i
                                                 class="fa-solid fa-i-cursor"></i></span>
                                     </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="input-group mb-3">
+                                    <input type="email" class="form-control public__form__input fontf__oswald fw-bold"
+                                        placeholder="الايميل" aria-label="email" aria-describedby="basic-addon3"
+                                        required name="email">
+                                    <span class="input-group-text" id="basic-addon3"><i
+                                            class="fa-solid fa-envelope"></i></span>
                                 </div>
                             </div>
                             <div class="row">
@@ -376,8 +415,8 @@
                                     <div class="mb-3">
                                         <label for="exampleFormControlTextarea1"
                                             class="form-label fontf__oswald fw-bold">الرسالة</label>
-                                        <textarea class="form-control" id="exampleFormControlTextarea1"
-                                            rows="3"></textarea>
+                                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"
+                                            required name="message"></textarea>
                                     </div>
                                 </div>
                             </div>
@@ -474,6 +513,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
         integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="./content/js/form.js"></script>
     <script src="./content/js/owl.carousel.-rtl.js"></script>
     <script src="./content/js/main.js"></script>
 </body>
