about us page En & Ar

--- a/index-ar.html
+++ b/index-ar.html
@@ -95,8 +95,8 @@
                     <li><a href="./outlets/air/air-ar.html" class="text_main_color">منافذ جوية</a></li>
                 </ul>
             </li>
-            <li><a class="text-white" href="./index.html">عن الشركة</a></li>
-            <li><a class="text-white" href="./index.html">تواصل معنا</a></li>
+            <li><a class="text-white" href="./about-us/about-ar.html">عن الشركة</a></li>
+            <li><a class="text-white" href="./contact/contact-ar.html">تواصل معنا</a></li>
             <li><a class="text-white" href="./index.html">English</a></li>
         </ul>
         <button class="fontf__oswald">طلب سعر </button>
@@ -106,7 +106,7 @@
     <nav class="mobile-nav">
         <span class="closing_btn"><i class="fa-solid fa-x text-white rounded-circle"></i></span>
         <ul class="mobile-nav__list m-0 p-0 py-2">
-            <a href="./index-ar.html">Home</a>
+            <a href="./index-ar.html">الصفحة الرئيسية</a>
             <a href="./index.html">خدماتنا</a>
             <li class="mobile__dropdown fontf__oswald">
                 <div class="d-flex justify-content-between align-items-center">
@@ -223,7 +223,7 @@
     </div>
 
     <!-- Start About Section  -->
-    <section class="about-section py-5 m">
+    <section class="about-section py-5">
         <div class="container">
             <div class="row ">
                 <div class="col-12 col-lg-6">
@@ -236,7 +236,8 @@
                         الجمركي من رواد الشركات المتخصصة في كافة الأمور الخاصة بالمجال الجمركي لدرايتنا الكالمىة
                         بمصطلحات الشحن والتخليص الجمركي واللوائح والقوانين التي تنظم عمليات التصدير والإستيراد
                     </p>
-                    <button class="main__btn fontf__oswald bg_red_color"><a class="text_main_color" href="#">تعرف علي
+                    <button class="main__btn fontf__oswald bg_red_color"><a class="text_main_color"
+                            href="./about-us/about-ar.html">تعرف علي
                             المزيد</a></button>
                 </div>
             </div>
