--- a/index.html
+++ b/index.html
@@ -21,8 +21,6 @@
         href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
         integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-
-
     <link rel="stylesheet" href="./content/css/main-ltr.css">
 
 </head>
@@ -230,7 +228,7 @@
     </div>
 
     <!-- Start About Section  -->
-    <section class="about-section py-5 m">
+    <section class="about-section py-5">
         <div class="container">
             <div class="row ">
                 <div class="col-12 col-lg-6">
@@ -245,7 +243,7 @@
                     <p class="text-color">specialized in all
                         matters related to the customs field due to our verbal knowledge of shipping terms, customs
                         clearance, regulations, and laws that regulate the export and import operations</p>
-                    <button class="main__btn fontf__oswald bg_red_color"><a class="text_main_color" href="#">Learn
+                    <button class="main__btn fontf__oswald bg_red_color"><a class="text_main_color" href="./about-us/about.html">Learn
                             More</a></button>
                 </div>
             </div>
