--- a/outlets/offshore/offshore-ar.html
+++ b/outlets/offshore/offshore-ar.html
@@ -99,7 +99,7 @@
     <nav class="mobile-nav">
         <span class="closing_btn"><i class="fa-solid fa-x text-white rounded-circle"></i></span>
         <ul class="mobile-nav__list m-0 p-0 py-2">
-            <a href="../../index-ar.html">Home</a>
+            <a href="../../index-ar.html">الصفحة الرئيسية</a>
             <a href="./index.html">خدماتنا</a>
             <li class="mobile__dropdown fontf__oswald">
                 <div class="d-flex justify-content-between align-items-center">
