add about banar & create contact us En & Ar

--- a/about-us/about-ar.html
+++ b/about-us/about-ar.html
@@ -137,8 +137,19 @@
         </div>
     </nav>
 
+    <!-- Start banar  -->
+    <section class="banar clr">
+        <img src="../content/assets/img/banar/breadcrumb-bg.png" alt="">
+        <div class="banar__content">
+            <h1>عن الشركة</h1>
+            <span class="fontf__oswald text-white"><a class="text-white" href="../index.html">الصفحة الرئيسية >></a> عن
+                الشركة</span>
+        </div>
+    </section>
+
+
     <!-- Start About -->
-    <section class="about-section py-5 clr">
+    <section class="about-section py-5">
         <div class="container">
             <div class="row ">
                 <div class="col-12 col-lg-6">
