--- a/about-us/about.html
+++ b/about-us/about.html
@@ -139,8 +139,18 @@
         </div>
     </nav>
 
+    <!-- Start banar  -->
+    <section class="banar">
+        <img src="../content/assets/img/banar/breadcrumb-bg.png" alt="">
+        <div class="banar__content">
+            <h1>ABOUT US</h1>
+            <span class="fontf__oswald text-white"><a class="text-white" href="../index.html">Home >></a> About
+                Us</span>
+        </div>
+    </section>
+
     <!-- Start About -->
-    <section class="about-section py-5 clr">
+    <section class="about-section py-5">
         <div class="container">
             <div class="row ">
                 <div class="col-12 col-lg-6">
