--- a/about-us/about-ar.html
+++ b/about-us/about-ar.html
@@ -89,7 +89,7 @@
             </li>
             <li><a class="text-white" href="../about-us/about-ar.html">عن الشركة</a></li>
             <li><a class="text-white" href="../contact/contact-ar.html">تواصل معنا</a></li>
-            <li><a class="text-white" href="../about-us/about.html">English</a></li>
+            <li><a class="text-white" href="./about.html">English</a></li>
         </ul>
         <button class="fontf__oswald">طلب سعر </button>
     </nav>
