--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <nav class="desktop-nav bg_red_color d-none d-lg-flex justify-content-between">
         <ul class="navslist m-0 p-0">
             <li><a class="text-white" href="./index.html">Home</a></li>
-            <li><a class="text-white" href="./index.html">Services</a></li>
+            <li><a class="text-white" href="./services/services.html">Services</a></li>
             <li class="desktop__dropdown">
                 <a class="text-white">Outlets</a>
                 <ul class="dropdown__content bg-white">
@@ -107,7 +107,7 @@
         <span class="closing_btn"><i class="fa-solid fa-x text-white rounded-circle"></i></span>
         <ul class="mobile-nav__list m-0 p-0 py-2">
             <a href="./index.html">Home</a>
-            <a href="./index.html">Services</a>
+            <a href="./services/services.html">Services</a>
             <li class="mobile__dropdown fontf__oswald">
                 <div class="d-flex justify-content-between align-items-center">
                     <span>Outlets</span>
@@ -243,7 +243,8 @@
                     <p class="text-color">specialized in all
                         matters related to the customs field due to our verbal knowledge of shipping terms, customs
                         clearance, regulations, and laws that regulate the export and import operations</p>
-                    <button class="main__btn fontf__oswald bg_red_color"><a class="text_main_color" href="./about-us/about.html">Learn
+                    <button class="main__btn fontf__oswald bg_red_color"><a class="text_main_color"
+                            href="./about-us/about.html">Learn
                             More</a></button>
                 </div>
             </div>
