--- a/services/services.html
+++ b/services/services.html
@@ -78,7 +78,7 @@
     <nav class="desktop-nav bg_red_color d-none d-lg-flex justify-content-between">
         <ul class="navslist m-0 p-0">
             <li><a class="text-white" href="../index.html">Home</a></li>
-            <li><a class="text-white" href="./index.html">Services</a></li>
+            <li><a class="text-white" href="./services.html">Services</a></li>
             <li class="desktop__dropdown">
                 <a class="text-white">Outlets</a>
                 <ul class="dropdown__content bg-white">
@@ -87,9 +87,9 @@
                     <li><a href="../outlets/air/air.html" class="text_main_color">Air Outlets</a></li>
                 </ul>
             </li>
-            <li><a class="text-white" href="./about.html">About us</a></li>
+            <li><a class="text-white" href="../about-us/about.html">About us</a></li>
             <li><a class="text-white" href="../contact/contact.html">Contact us</a></li>
-            <li><a class="text-white" href="./about-ar.html">عربي</a></li>
+            <li><a class="text-white" href="./services-ar.html">عربي</a></li>
         </ul>
         <button class="fontf__oswald">get a quote</button>
     </nav>
@@ -99,7 +99,7 @@
         <span class="closing_btn"><i class="fa-solid fa-x text-white rounded-circle"></i></span>
         <ul class="mobile-nav__list m-0 p-0 py-2">
             <a href="../index.html">Home</a>
-            <a href="./index.html">Services</a>
+            <a href="./services.html">Services</a>
             <li class="mobile__dropdown fontf__oswald">
                 <div class="d-flex justify-content-between align-items-center">
                     <span>Outlets</span>
@@ -119,9 +119,9 @@
                     </li>
                 </ul>
             </li>
-            <a href="./about.html">About us</a>
+            <a href="../about-us/about.html">About us</a>
             <a href="../contact/contact.html">Contact us</a>
-            <a href="./about-ar.html">عربي</a>
+            <a href="./services-ar.html">عربي</a>
         </ul>
         <div class="mobile-nav__info">
             <span>
@@ -143,82 +143,101 @@
     <section class="banar">
         <img src="../content/assets/img/banar/breadcrumb-bg.png" alt="">
         <div class="banar__content">
-            <h1>ABOUT US</h1>
-            <span class="fontf__oswald text-white"><a class="text-white" href="../index.html">Home >></a> About
-                Us</span>
+            <h1>Services</h1>
+            <span class="fontf__oswald text-white"><a class="text-white" href="../index.html">Home >></a>
+                Services</span>
         </div>
     </section>
 
-    <!-- Start About -->
-    <section class="about-section py-5">
+    <!-- Start Services  -->
+    <Section class="services py-5">
         <div class="container">
-            <div class="row ">
-                <div class="col-12 col-lg-6">
-                    <img class="img-fluid" src="../content/assets/img/About-section/about-img.webp" alt="">
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3">
+                <div class="col">
+                    <div class="services__card">
+                        <div class="services__number fontf__oswald fs-4 fw-bold">01</div>
+                        <div class="card__content">
+                            <div class="mb-4"><img width="70" src="../content/assets/img/outlets-section/boat.webp"
+                                    alt="">
+                            </div>
+                            <h5 class="text_main_color">Air cargo services</h3>
+                                <p class="text-color">We provide customs clearance services to more than one airport at
+                                    the crossroads of Saudi Arabia.</p>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-12 col-lg-6 px-5 mt-lg-0 mt-5 py-5">
-                    <span class="text_red_color fw-bold">About Us</span>
-                    <h2 class="text_main_color fs-1 mb-4">Masarat Al Mina It is your first choice</h2>
-                    <p class="text-color">Based on more than twenty years of experience, the company's founders are in
-                        the field of customs clearance; thanks to the professionalism of those responsible for this, we
-                        have created (port tracks) for customs clearance</p>
-                    <p class="text-color">which is the first choice for many thanks to its endless professionalism,
-                        Speed of execution, and complete knowledge of delivery terms, customs clearance, rules, and laws
-                        governing export and import operations; therefore, you can flexibly and quickly settle all
-                        issues at customs, which will help you save time, effort, and money.</p>
+                <div class="col">
+                    <div class="services__card">
+                        <div class="services__number fontf__oswald fs-4 fw-bold">02</div>
+                        <div class="card__content">
+                            <div class="mb-4"><img width="70" src="../content/assets/img/outlets-section/boat.webp"
+                                    alt="">
+                            </div>
+                            <h5 class="text_main_color">Ground Freight Services</h3>
+                                <p class="text-color">We provide ground freight services and help transport customer
+                                    merchandise.</p>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div class="row flex-column-reverse flex-lg-row">
-                <div class="col-12 col-lg-6 px-5 mt-lg-0 pt-5">
-                    <span class="text_red_color fw-bold">Our Vision</span>
-                    <h3 class="text_main_color mb-4">(Satisfaction of our customers) is our ultimate goal and
-                        mission</h5>
-                        <p class="text-color">Becoming one of the pioneers in the field of customs clearance relies on
-                            our professionalism and professionalism. Of course, the speed of completion will be the
-                            first choice for individuals and entrepreneurs to provide our service to any seaport, land,
-                            or air.
-                        </p>
-                </div>
-                <div class="col-12 col-lg-6 p-0">
-                    <img class="img-fluid" src="../content/assets/img/About-section/approch-img.jpg" alt="">
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12 col-lg-6 p-0">
-                    <img class="img-fluid" src="../content/assets/img/About-section/mission-image.jpg" alt="">
-                </div>
-                <div class="col-12 col-lg-6 px-5 mt-lg-0 pt-5">
-                    <span class="text_red_color fw-bold">Our Mission</span>
-                    <h3 class="text_main_color mb-4">(Satisfaction of our customers) is our ultimate goal and
-                        mission</h4>
-                        <p class="text-color">Solve the customs clearance dilemma quickly and provide our service to
-                            everyone to change the term customs clearance to become an entire industry.
-                        </p>
+                <div class="col">
+                    <div class="services__card">
+                        <div class="services__number fontf__oswald fs-4 fw-bold">03</div>
+                        <div class="card__content">
+                            <div class="mb-4"><img width="70" src="../content/assets/img/outlets-section/boat.webp"
+                                    alt="">
+                            </div>
+                            <h5 class="text_main_color">Shipping Services</h3>
+                                <p class="text-color">We are working on a comprehensive multi-service network covering
+                                    the most significant number of Red Sea and Gulf ports</p>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="row flex-column-reverse flex-lg-row">
-                <div class="col-12 col-lg-6 px-5 mt-lg-0 pt-5">
-                    <span class="text_red_color fw-bold">Our Objectives</span>
-                    <h3 class="text_main_color mb-4">(Satisfaction of our customers) is our ultimate goal and
-                        mission</h5>
-                        <ul class="number__list">
-                            <li class="text-color mb-2 fs-6 fontf__oswald mb-4"><span>01</span>To become one of the
-                                pioneers of the customs clearance industry in the kingdom of Saudi Arabia.</li>
-                            <li class="text-color mb-2 fs-6 fontf__oswald mb-4"><span>02</span>To be the first choice
-                                for many entrepreneurs, traders, and individuals.</li>
-                            <li class="text-color mb-2 fs-6 fontf__oswald mb-4"><span>03</span>We aspire to make the
-                                customs clearance industry later be done remotely at the push of a button through us.
-                            </li>
-                            <li class="text-color mb-2 fs-6 fontf__oswald mb-4"><span>04</span>We provide the best
-                                service to our customers.</li>
-                        </ul>
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 mt-lg-2">
+                <div class="col">
+                    <div class="services__card">
+                        <div class="services__number fontf__oswald fs-4 fw-bold">04</div>
+                        <div class="card__content">
+                            <div class="mb-4"><img width="70" src="../content/assets/img/outlets-section/boat.webp"
+                                    alt="">
+                            </div>
+                            <h5 class="text_main_color">Storage Services</h3>
+                                <p class="text-color">We have a large base of warehouses and warehouses spread around
+                                    the ports and airports of the Kingdom of Saudi Arabia.</p>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-12 col-lg-6 p-0">
-                    <img class="w-100" src="../content/assets/img/About-section/about-page-1.jpg" alt="">
+                <div class="col">
+                    <div class="services__card">
+                        <div class="services__number fontf__oswald fs-4 fw-bold">05</div>
+                        <div class="card__content">
+                            <div class="mb-4"><img width="70" src="../content/assets/img/outlets-section/boat.webp"
+                                    alt="">
+                            </div>
+                            <h5 class="text_main_color">Import and Export Auxiliary Services</h3>
+                                <p class="text-color">We rely heavily on our expertise in providing assistance, clearing
+                                    documents, and permits in international trading businesses such as import and export
+                                    services.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="services__card">
+                        <div class="services__number fontf__oswald fs-4 fw-bold">06</div>
+                        <div class="card__content">
+                            <div class="mb-4"><img width="70" src="../content/assets/img/outlets-section/boat.webp"
+                                    alt="">
+                            </div>
+                            <h5 class="text_main_color">Logistics</h3>
+                                <p class="text-color">Logistics services are the most important services that commercial
+                                    companies rely on to facilitate their business. Logistics services are defined as
+                                    the art of coordinating and managing the flow of resources.</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-    </section>
+    </Section>
 
     <!-- Start Footer -->
     <footer class="bg_main_color text-white pt-5">
