create services Ar & handle Links

--- a/contact/contact-ar.html
+++ b/contact/contact-ar.html
@@ -78,7 +78,7 @@
     <nav class="desktop-nav bg_red_color d-none d-lg-flex justify-content-between">
         <ul class="navslist m-0 p-0">
             <li><a class="text-white" href="../index-ar.html">الصفحة الرئيسية</a></li>
-            <li><a class="text-white" href="./index.html">خدماتنا</a></li>
+            <li><a class="text-white" href="../services/services-ar.html">خدماتنا</a></li>
             <li class="desktop__dropdown">
                 <a class="text-white">المنافذ</a>
                 <ul class="dropdown__content bg-white">
@@ -99,7 +99,7 @@
         <span class="closing_btn"><i class="fa-solid fa-x text-white rounded-circle"></i></span>
         <ul class="mobile-nav__list m-0 p-0 py-2">
             <a href="../index-ar.html">الصفحة الرئيسية</a>
-            <a href="./index.html">خدماتنا</a>
+            <a href="../services/services-ar.html">خدماتنا</a>
             <li class="mobile__dropdown fontf__oswald">
                 <div class="d-flex justify-content-between align-items-center">
                     <span>المنافذ</span>
