--- a/about-us/about.html
+++ b/about-us/about.html
@@ -78,7 +78,7 @@
     <nav class="desktop-nav bg_red_color d-none d-lg-flex justify-content-between">
         <ul class="navslist m-0 p-0">
             <li><a class="text-white" href="../index.html">Home</a></li>
-            <li><a class="text-white" href="./index.html">Services</a></li>
+            <li><a class="text-white" href="../services/services.html">Services</a></li>
             <li class="desktop__dropdown">
                 <a class="text-white">Outlets</a>
                 <ul class="dropdown__content bg-white">
@@ -99,7 +99,7 @@
         <span class="closing_btn"><i class="fa-solid fa-x text-white rounded-circle"></i></span>
         <ul class="mobile-nav__list m-0 p-0 py-2">
             <a href="../index.html">Home</a>
-            <a href="./index.html">Services</a>
+            <a href="../services/services.html">Services</a>
             <li class="mobile__dropdown fontf__oswald">
                 <div class="d-flex justify-content-between align-items-center">
                     <span>Outlets</span>
